src/objects/Change_Request__c.object
<CustomObject>


    <description>Generic Change Request Requiring approval</description>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChangeRequest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <inlineHelpText>A Description of the change that is being requested for approval</inlineHelpText>
        <label>Change Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Title__c</fullName>
        <label>Change Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Business</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Change Request Approval</relationshipLabel>
        <relationshipName>ChangeRequest</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChangeRequest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>At_Least_One_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Approver__c )</errorConditionFormula>
        <errorMessage>You must select an Approver</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_cannot_Approve</fullName>
        <active>true</active>
        <description>The current user cannot approve their own change request</description>
        <errorConditionFormula>$User.Id  =   Approver__r.Id</errorConditionFormula>
        <errorMessage>You cannot approve your own change request.</errorMessage>
    </validationRules>
</CustomObject>